remove duplicated patients

--- a/final_project.html
+++ b/final_project.html
@@ -255,6 +255,10 @@ ghproject %&gt;%
 </tr>
 </tbody>
 </table>
+<pre class="r"><code>#summary of categorical data
+ghproject %&gt;% 
+  select()</code></pre>
+<pre><code>## # A tibble: 3,682 x 0</code></pre>
 <pre class="r"><code>#summary of PatientID and VisitID
 ghproject %&gt;% 
   distinct(PatientID) %&gt;% 
